--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Hello?</title>
 </head>
 <body>
-<img src="Stazzy Idle.gif" height="64px" width="64px">
+<img src="47 Shrug TP.png" height="100%" width="100%">
 <p>Are You Still There?</p>
 <button onclick="location.href='https://stazzy-station.pages.dev/'" type="button">Yes</button>
 <button onclick="location.href='off.html'" type="button">No</button>
